@@ -12,6 +12,7 @@
 import warnings
 
 from docutils import nodes
+from sphinx.deprecation import RemovedInSphinx16Warning
 
 
 class translatable(object):
@@ -276,12 +277,12 @@ class termsep(nodes.Structural, nodes.Element):
     """Separates two terms within a <term> node.
 
     .. versionchanged:: 1.4
-       sphinx.addnodes.termsep is deprecated. It will be removed at Sphinx-1.5.
+       sphinx.addnodes.termsep is deprecated. It will be removed at Sphinx-1.6.
     """
 
     def __init__(self, *args, **kw):
-        warnings.warn('sphinx.addnodes.termsep will be removed at Sphinx-1.5',
-                      DeprecationWarning, stacklevel=2)
+        warnings.warn('sphinx.addnodes.termsep will be removed at Sphinx-1.6',
+                      RemovedInSphinx16Warning, stacklevel=2)
         super(termsep, self).__init__(*args, **kw)
 
 
